# supporttgbot

./: .env  .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  sqlx-data.json  test.http
migrations/: 20220904191826_feedback.down.sql  20220904191826_feedback.up.sql  20220926053424_source.down.sql  20220926053424_source.up.sql
src/: feedback.rs  main.rs  message.rs  routes.rs  telegram.rs  zinc.rs
